fix alignment of icons

--- a/css/creative.css
+++ b/css/creative.css
@@ -27,7 +27,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #eb3812;
+  color: #83B2D0;
 }
 h1,
 h2,
